--- a/client/src/index.css
+++ b/client/src/index.css
@@ -58,7 +58,8 @@ html {
 }
 
 .filepicker-container {
-  @apply absolute left-full ml-3 p-3 w-[195px] h-[220px] flex flex-col rounded-md;
+  @apply w-full max-w-sm flex flex-col gap-4;
+  padding: 0;
 }
 
 .filepicker-label {
